deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engage
  labels:
    app: engage
spec:
  type: ClusterIP
  selector:
    app: engage
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
    - protocol: TCP
      port: 443
      targetPort: https
      name: https
    - protocol: TCP
      port: 22
      targetPort: ssh
      name: ssh
